--- a/src/App.css
+++ b/src/App.css
@@ -54,23 +54,49 @@ Login page
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  border: 1px solid red;
   height: 45rem;
+  background-color: #ebebeb;
   /* height: 720px; */
+  /* border: 1px solid red; */
 }
 
-.login-page-center{
-  /* margin: 0 auto; */
-  width: 30rem;
-  height: 40vh;
-
-  border: 1px solid green;
+.login-page-box{
+  display: flex;
+  align-items: center;
+  /* justify-content: center; */
+  flex-direction: column;
+  width: 35rem;
+  height: 60vh;
+  /* background-color: #f2f2f2; */
+  background-color: #FFFFFF;
+  border-bottom: 1px solid #f2f2f2;
+  border-left: 1px solid #f2f2f2;
+  border-right: 1px solid #f2f2f2;
 }
 .login-page-header{
-  height: 11vh;
-  background: no-repeat center url(../src/images/stock-photo-16260189.jpg);
+  text-align: center;
+  width: 35rem;
+  height: 120px;
+  padding-top: 35px;
+  color: #ffffff;
+  border-top-left-radius: 3px;
+  border-top-right-radius: 3px;
+  background-color: #242b31;
+  margin-bottom: 35px;
+  /* border: 1px solid red; */
+}
+.login-page-form{
+  padding: 5px;
+  width: 35em;
+  padding: 5px;
+  /* border: 2px solid #f2f2f2; */
+
 }
 
+/*
+Notification
+
+ */
 
 
 /* 
@@ -117,10 +143,9 @@ Style for the Blogs Component
 
 .col-list-flex.header {
   background-color: #242b31;
-  width: 50em;
+  width: 48em;
   padding: 5px;
-  height: 6vh;
-  
+  height: 6vh; 
 }
 
 .text {
